# manga_site_django

./: .env.dev  .env.example  .env.prod  Dockerfile  README.md  docker-compose.yaml  nginx.7z  plan.txt  pyproject.toml  requirements.txt  run_with_reload.sh  run_with_reload_prod.sh  webpack.config.js
.github/workflows/: tests_on_push.yaml
database_backups/: PostgreSQL.sql  custom_user_1_title_added.sql  pgdb.sql  release_custom.sql  release_plain.sql  temp.sql
docker/: entrypoint.sh
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
nginx/: cert.crt  key.key  main  nginx.conf
nginx/hosting/: nginx.conf
nginx/macos/: nginx.conf
parser/: remanga_parser.py  requirements.txt  test_remanga_parser.py
remanga/: apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  tests.py  urls.py  views.py
remanga/migrations/: 0001_initial.py  0002_remove_title_avg_rating_remove_title_categories_and_more.py  0003_remove_user_titles_delete_title.py  0004_title_user_titles.py  0006_title_avg_rating_title_count_bookmarks_and_more.py  0012_rating_user_ratings.py  0013_user_avatar.py  0014_alter_user_avatar.py  0015_comment_title_comments.py  0017_remove_user_ratings_title_rating_delete_rating.py  0018_rename_title_id_title_rating_title_and_more.py  0019_remove_title_chapters_title_chapters.py  0020_delete_chapters.py  0021_rename_titles_user_bookmarks.py  0022_remove_title_comments_ratings_comments_likes_and_more.py  0023_comment_comment_rating.py
remanga/templates/: catalog.html  (+9 more)
remanga_site/: asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
(+87 files in other folders)
