[tool.poetry]
name = "manga-site-django"
version = "0.1.0"
description = ""
authors = ["TimurMeshchenko <matsuokisho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.8.1"
channels = "^4.1.0"
django = "^5.0.4"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
sqlparse = "^0.5.0"
tzdata = "^2024.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
wsproto = "^1.2.0"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
redis = "^5.0.3"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
